docs(perf): lock first GCP three-node cluster validation